Krestan to rek nejlip added
Signed-off-by: Tomáš Nouza <tomas.nouza@seznam.cz>

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -9,6 +9,7 @@
 \input{songs/jeruzalem.tex}
 \input{songs/jestemichvilkuzpivej.tex}
 \input{songs/krasojezdkyne.tex}
+\input{songs/krestantoreknejlip.tex}
 \input{songs/nechtenas.tex}
 \input{songs/nehraloseoceny.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
