Panta rhei added.
Signed-off-by: Tomáš Nouza <tomas.nouza@seznam.cz>

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -13,6 +13,7 @@
 \input{songs/nechtenas.tex}
 \input{songs/nehraloseoceny.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
+\input{songs/pantarhei.tex}
 \input{songs/potulnikejkliri.tex}
 \input{songs/sejdemesevpanu.tex}
 \input{songs/slapejdal.tex}
