--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -8,6 +8,7 @@
 \input{songs/holkaodkoni.tex}
 \input{songs/jeruzalem.tex}
 \input{songs/jestemichvilkuzpivej.tex}
+\input{songs/kejklir.tex}
 \input{songs/krasojezdkyne.tex}
 \input{songs/krestantoreknejlip.tex}
 \input{songs/nechtenas.tex}
