--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -1,22 +1,22 @@
-\input{songs/bluesonepodaneruce.tex}
-\input{songs/cesta.tex}
-\input{songs/ctverorocnichobdobi.tex}
-\input{songs/dobrejden.tex}
-\input{songs/dopis.tex}
-\input{songs/fram.tex}
-\input{songs/hledani.tex}
-\input{songs/holkaodkoni.tex}
-\input{songs/jeruzalem.tex}
-\input{songs/jestemichvilkuzpivej.tex}
-\input{songs/kejklir.tex}
-\input{songs/krasojezdkyne.tex}
-\input{songs/krestantoreknejlip.tex}
-\input{songs/nechtenas.tex}
-\input{songs/nehraloseoceny.tex}
-\input{songs/panebozeodlaskyzachrannas.tex}
-\input{songs/pantarhei.tex}
-\input{songs/potulnikejkliri.tex}
-\input{songs/sejdemesevpanu.tex}
-\input{songs/slapejdal.tex}
-\input{songs/usmejsenasvet.tex}
-\input{songs/vojinnikdo.tex}
+\input{../songs/bluesonepodaneruce.tex}
+\input{../songs/cesta.tex}
+\input{../songs/ctverorocnichobdobi.tex}
+\input{../songs/dobrejden.tex}
+\input{../songs/dopis.tex}
+\input{../songs/fram.tex}
+\input{../songs/hledani.tex}
+\input{../songs/holkaodkoni.tex}
+\input{../songs/jeruzalem.tex}
+\input{../songs/jestemichvilkuzpivej.tex}
+\input{../songs/kejklir.tex}
+\input{../songs/krasojezdkyne.tex}
+\input{../songs/krestantoreknejlip.tex}
+\input{../songs/nechtenas.tex}
+\input{../songs/nehraloseoceny.tex}
+\input{../songs/panebozeodlaskyzachrannas.tex}
+\input{../songs/pantarhei.tex}
+\input{../songs/potulnikejkliri.tex}
+\input{../songs/sejdemesevpanu.tex}
+\input{../songs/slapejdal.tex}
+\input{../songs/usmejsenasvet.tex}
+\input{../songs/vojinnikdo.tex}
