Rollback of 9cd6513c04e9ecdb1c8f22feb057f67d938d34da (changes to relative paths). Added songidx binary. Editted makefile to use it.

--- a/FF/ff.tex
+++ b/FF/ff.tex
@@ -22,7 +22,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[czech]{babel}
 \usepackage[bookmarks]{hyperref}
-\usepackage[chorded,noshading]{../songs}
+\usepackage[chorded,noshading]{songs}
 \usepackage[cm]{fullpage}
 % \includeonlysongs{2}
 
