Added prvni dama country from Pacifik.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -15,6 +15,7 @@
 \input{songs/nehraloseoceny.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
 \input{songs/pantarhei.tex}
+\input{songs/prvnidamacountry.tex}
 \input{songs/potulnikejkliri.tex}
 \input{songs/sejdemesevpanu.tex}
 \input{songs/slapejdal.tex}
