Added memento vitae.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -14,6 +14,7 @@
 \input{songs/krestantoreknejlip.tex}
 \input{songs/nechtenas.tex}
 \input{songs/nehraloseoceny.tex}
+\input{songs/mementovitae.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
 \input{songs/pantarhei.tex}
 \input{songs/potulnikejkliri.tex}
