Changed Am to Ami in krestantoreknejlip for consistency.

--- a/songs/krestantoreknejlip.tex
+++ b/songs/krestantoreknejlip.tex
@@ -21,11 +21,11 @@ jedněch almužna je pro jiný plat,
 \endverse
 \beginref
 \[F]Když oči jak brány \[C]zavřem,
-je tu \[G]noc jak černej \[Am]mák,
+je tu \[G]noc jak černej \[Ami]mák,
 jsme \[F]ve válce, je \[C]válka v nás,
 a \[G]zase nao\[Am]pak
 Ten \[F]Křesťan to řek \[C]nejlíp,
-řek kde \[G]klíč brána \[Am]má,
+řek kde \[G]klíč brána \[Ami]má,
 \[F]Tak otevři \[C]oči, ta \[F]hloupá noc \[C]končí a mír je \[G]mezi ná\[C]ma
 \endverse
 \beginverse
