Changed page builder settings to avoid page turns.

--- a/FF/ff.tex
+++ b/FF/ff.tex
@@ -37,7 +37,8 @@
 
 \newindex{titleidx}{cbtitle}
 \indexsongsas{titleidx}{\thepage}
-\songcolumns{0}
+\songcolumns{1}
+\songpos{1}
 \renewcommand{\notebgcolor}{white}
 \setlength{\cbarwidth}{0pt}
 \setlength{\sbarheight}{0pt}
