Added casysemeni - spiritual kvintet.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -1,4 +1,5 @@
 \input{songs/bluesonepodaneruce.tex}
+\input{songs/casysemeni.tex}
 \input{songs/cesta.tex}
 \input{songs/ctverorocnichobdobi.tex}
 \input{songs/dobrejden.tex}
