--- a/songs/krasojezdkyne.tex
+++ b/songs/krasojezdkyne.tex
@@ -28,6 +28,6 @@ naše cesty už se asi těžko zkříží,
 hledám tě v Babylóně, a ty jsi v Paříži.
 \endverse
 \beginref
-~
+Krasojezdkyně, sestro akrobatů\ldots
 \endverse
 \endsong
