added stranzatrati and pohlidamtvujspanek

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -18,9 +18,11 @@
 \input{songs/mementovitae.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
 \input{songs/pantarhei.tex}
+\input{songs/pohlidamtvujspanek.tex}
 \input{songs/potulnikejkliri.tex}
 \input{songs/prvnidamacountry.tex}
 \input{songs/sejdemesevpanu.tex}
 \input{songs/slapejdal.tex}
+\input{songs/stranzatrati.tex}
 \input{songs/usmejsenasvet.tex}
 \input{songs/vojinnikdo.tex}
