Minor syntax errors fixed in Pohlidam tvuj spanek

--- a/songs/pohlidamtvujspanek.tex
+++ b/songs/pohlidamtvujspanek.tex
@@ -2,7 +2,7 @@
 \capo{6}
 \beginverse
 \[Ami]Vždycky stál si hodně blízko, aby nebolel mě pád
-a \[G]tajemně říkal: \uv[člověk \[Fmaj7]zjistí kam nepa\[Emi]tří].
+a \[G]tajemně říkal: \uv{člověk \[Fmaj7]zjistí kam nepa\[Emi]tří}.
 Nikdy \[Ami]nebyl jsi ten frajer co z písku staví hrad
 a \[G]z nafouknutejch frází jednu \[Fmaj7]střídá za \[Emi]druhou.
 \endverse
@@ -10,7 +10,7 @@ a \[G]z nafouknutejch frází jednu \[Fmaj7]střídá za \[Emi]druhou.
 Pak s jarem jsi se ztratil a to ráno bylo zlý,
 to ráno jménem prázdno přišlo náhle, za pár dní.
 A jak zimu přihnal čas tak mý dlaně promrzlý
-hřálo jak´s mi říkal: \uv[tak už půjdem za duhou].
+hřálo jaks mi říkal: \uv{tak už půjdem za duhou}.
 \endverse
 \beginref
 Já \[Ami]pohlídám tvůj spánek, tvůj polštář pod hlavou.
