--- a/songs/pohlidamtvujspanek.tex
+++ b/songs/pohlidamtvujspanek.tex
@@ -2,7 +2,7 @@
 \capo{6}
 \beginverse
 \[Ami]Vždycky stál si hodně blízko, aby nebolel mě pád
-a \[G]tajemně říkal: \uv{člověk \[Fmaj7]zjistí kam nepa\[Emi]tří}.
+a \[G]tajemně jsi říkal: \uv{člověk \[Fmaj7]zjistí kam ne\[Emi]patří}.
 Nikdy \[Ami]nebyl jsi ten frajer co z písku staví hrad
 a \[G]z nafouknutejch frází jednu \[Fmaj7]střídá za \[Emi]druhou.
 \endverse
