--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -10,6 +10,7 @@
 \input{songs/jeruzalem.tex}
 \input{songs/jestemichvilkuzpivej.tex}
 \input{songs/kamen.tex}
+\input{songs/kazdysinesesvebrime.tex}
 \input{songs/kejklir.tex}
 \input{songs/krasojezdkyne.tex}
 \input{songs/krestantoreknejlip.tex}
