Fixed verse counting in Memento vitae + small bugfixes.

--- a/songs/mementovitae.tex
+++ b/songs/mementovitae.tex
@@ -1,5 +1,5 @@
 \beginsong{Memento vitae}[by={Marien}]
-\beginverse*
+\beginverse
 \[A]Včera jsem se díval na tvé ruce 
 Zdá se \[F#mi]mi, jako by \[C#mi]trochu zestár\[D]ly 
 Promiň, já \[C#mi]nikdy nebyl zrovna všíma\[D]vý 
@@ -29,7 +29,7 @@ I když mé boty zdobí špína z cest a bláto
 I když nám osud rozdal karty v přízemí 
 A složenky nás drží při zemi 
 Jsem nejbohatší nejšťastnější mužskej 
-Když zpod stolu slyším táto \ldots
+Když zpod stolu slyším táto\ldots
 \endverse
 \beginref
 ~
