few bugfixes, removed holka od koni, dopis.

--- a/songs/casysemeni.tex
+++ b/songs/casysemeni.tex
@@ -2,8 +2,8 @@
 \beginverse
 \[C]Svět mění svou \[Ami]tvář \[F6]a den stíhá \[C]den 
 jenom blázen \[F]ostatním \[Dmi]v cestě by \[G]stál 
-\[C]a ráno \[Ami]slunce \[F6]zah\[C]ání sen 
-jednou dokraluje \[F]i ten \[Dmi]největší \[G]král. 
+\[C]a ráno \[Ami]slunce \[F6]zahání \[C]sen 
+jednou dokralu\[F]je i ten \[Dmi]největší \[G]král. 
 \endverse
 \beginref
 Vždyť \[G]všichni, kdo \[G/F]vidí, jd\[G/E]ou po ce\[G/D]stě dál 
@@ -24,7 +24,7 @@ zůstal stát a ostatním pyšně se smál
 však dřív, než se z oslavy vzpamatoval 
 zase poslední na konci zástupu stál. 
 \endverse
-\beginverse 
-Na na na\ldots
+\beginref
+~
 \endverse
 \endsong
