--- a/songs/cesta.tex
+++ b/songs/cesta.tex
@@ -6,12 +6,12 @@
 \endverse
 \beginverse
 \memorize[verse]
-\[Ami]Z tvé cesty zbývá sedm d\[F]louhých d\[G]ní 
+\[Ami]Z tvé cesty zbývá sedm d\[F]louhých d\[G]ní,
 tvůj prám se kývá, táhlá \[C]píseň \[F]zní,
 blíží se \[G]den, slunce \[F]vstá\[G]vá. 
 \replay[verse]
 ^Tvůj čas se krátí, nemů^žeš tu ^stát,
-dal a má dáti, vzkaz co c^htěl si ^psát,
+dal a má dáti vzkaz, co c^htěl si ^psát,
 máš sílu ^jít cestou ^pří^mou k \[F]sví\[G]tá\[C]ní. 
 \endverse
 \beginref 
