--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -15,6 +15,7 @@
 \input{songs/nechtenas.tex}
 \input{songs/nehraloseoceny.tex}
 \input{songs/mementovitae.tex}
+\input{songs/mozna.tex}
 \input{songs/panebozeodlaskyzachrannas.tex}
 \input{songs/pantarhei.tex}
 \input{songs/pohlidamtvujspanek.tex}
