Added Na ty louce zeleny, Pijte vodu, Proklatej vuz.

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -1,3 +1,6 @@
 \input{songs/jdemzpatkydolesu}
-\input{songs/ranavtrave}
 \input{songs/kometa}
+\input{songs/natyloucezeleny}
+\input{songs/pijtevodu}
+\input{songs/proklatejvuz}
+\input{songs/ranavtrave}
