Added Dokud se zpiva, Prodavac limonad, Rosa na kolejich, Soudny den.

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -1,6 +1,10 @@
+\input{songs/dokudsezpiva}
 \input{songs/jdemzpatkydolesu}
 \input{songs/kometa}
 \input{songs/natyloucezeleny}
 \input{songs/pijtevodu}
+\input{songs/prodavaclimonad}
 \input{songs/proklatejvuz}
+\input{songs/rosanakolejich}
+\input{songs/soudnyden}
 \input{songs/ranavtrave}
