Added Hlidac krav

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -1,4 +1,5 @@
 \input{songs/dokudsezpiva}
+\input{songs/hlidackrav}
 \input{songs/jdemzpatkydolesu}
 \input{songs/kometa}
 \input{songs/natyloucezeleny}
