Added Poveste ho vejs.

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -4,6 +4,7 @@
 \input{songs/kometa}
 \input{songs/natyloucezeleny}
 \input{songs/pijtevodu}
+\input{songs/povestehovejs}
 \input{songs/prodavaclimonad}
 \input{songs/proklatejvuz}
 \input{songs/rosanakolejich}
