Added Hejkal, Hej kapitane, Pod dubem, Spinkej.

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -1,12 +1,16 @@
 \input{songs/dokudsezpiva}
+\input{songs/hejkapitane}
+\input{songs/hejkal}
 \input{songs/hlidackrav}
 \input{songs/jdemzpatkydolesu}
 \input{songs/kometa}
 \input{songs/natyloucezeleny}
 \input{songs/pijtevodu}
+\input{songs/poddubem}
 \input{songs/povestehovejs}
 \input{songs/prodavaclimonad}
 \input{songs/proklatejvuz}
+\input{songs/ranavtrave}
 \input{songs/rosanakolejich}
 \input{songs/soudnyden}
-\input{songs/ranavtrave}
+\input{songs/spinkej}
