Added Prusvihovej den

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -10,6 +10,7 @@
 \input{songs/povestehovejs}
 \input{songs/prodavaclimonad}
 \input{songs/proklatejvuz}
+\input{songs/prusvihovejden}
 \input{songs/ranavtrave}
 \input{songs/rosanakolejich}
 \input{songs/soudnyden}
