Added blizko little big hornu, Kozel.

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -1,9 +1,11 @@
+\input{songs/blizkolittlebighornu}
 \input{songs/dokudsezpiva}
 \input{songs/hejkapitane}
 \input{songs/hejkal}
 \input{songs/hlidackrav}
 \input{songs/jdemzpatkydolesu}
 \input{songs/kometa}
+\input{songs/kozel}
 \input{songs/natyloucezeleny}
 \input{songs/pijtevodu}
 \input{songs/poddubem}
