Opraven taborovy zpevnik podle dohody s Barcou.

--- a/Tabor/songs.tex
+++ b/Tabor/songs.tex
@@ -1,11 +1,10 @@
-\input{songs/blizkolittlebighornu}
 \input{songs/dokudsezpiva}
-\input{songs/hejkapitane}
+\input{songs/dudyzedinburgu}
 \input{songs/hejkal}
-\input{songs/hlidackrav}
+\input{songs/hejkapitane}
+\input{songs/hudsonskysify}
 \input{songs/jdemzpatkydolesu}
-\input{songs/kometa}
-\input{songs/kozel}
+\input{songs/jezisek}
 \input{songs/natyloucezeleny}
 \input{songs/pijtevodu}
 \input{songs/poddubem}
@@ -17,3 +16,4 @@
 \input{songs/rosanakolejich}
 \input{songs/soudnyden}
 \input{songs/spinkej}
+\input{songs/vlastovkolet}
