Little bugfixes to tabor songbook.

--- a/songs/dudyzedinburgu.tex
+++ b/songs/dudyzedinburgu.tex
@@ -18,7 +18,7 @@ ten si \[D]se Skoty a se Skotkami \[A]nezask\[D]otačí.
 \beginverse
 Skotská kostka červená a zelená,
 skotské střapce ozdobí nám kolena.
-Každou chvíli holka letí v povětří,
+Každou chvíli holka letí povětřím,
 Skoti pohybem totiž nešetří.
 \endverse
 \beginref
