--- a/songs/jezisek.tex
+++ b/songs/jezisek.tex
@@ -1,8 +1,8 @@
 \beginsong{Ježíšek}[by={Jaromír Nohavica}]
 \beginverse
-Dal sem na plotnu \[Ami]vodu, zapnul p\[Dmi]lyn,
+Dal jsem na plotnu \[Ami]vodu, zapnul p\[Dmi]lyn,
 nasypal če\[G]rnou mletou kávu do hrníč\[C]ku.\[E]
-Pustil sem d\[Ami]esku - trojku Q\[Dmi]ueen,
+Pustil jsem d\[Ami]esku -- trojku Q\[Dmi]ueen,
 zapálil n\[E]a stromečku nejhořejší s\[Ami]víčku.
 \endverse
 \beginref
