--- a/songs/povestehovejs.tex
+++ b/songs/povestehovejs.tex
@@ -2,7 +2,7 @@
 \beginrec
 Na dnešek jsem měl divnej sen, Slunce pálilo a před saloonem
 stál v prachu dav, v tvářích cejch očekávání. Uprostřed
-šibenice z hrubých klád šerifův pomocník sejmul odsouzenci
+šibenice z hrubých klád, šerifův pomocník sejmul odsouzenci
 z hlavy kápi a dav zašuměl překvapením. I já jsem zašuměl
 překvapením. Ten odsouzenec jsem byl já a šerif četl
 neúprosným hlasem rozsudek:
@@ -40,7 +40,7 @@ Pověste ho za tu jistou, který nesplnil svůj slib,
 že byl zarputilým optimistou, a tak dělal spoustu chyb.
 \endverse
 \beginstar
-Pověste ho, že se koukal a že hodně jedl a hodně pil,
+Pověste ho, že se koukal a že hodně jed a hodně pil,
 že dal přednost jarním loukám,
 a pak se oženil a pak se usadil a žil.
 \endverse
