--- a/songs/proklatejvuz.tex
+++ b/songs/proklatejvuz.tex
@@ -2,7 +2,7 @@
 \beginverse
 Č\[C]tyři (jen tři) (jen dvě) b\[G]ytelný \[Ami]kola m\[F]á náš pr\[Emi]oklatej v\[G]ůz,
 tak j\[C]eště p\[F]ár dl\[C]ouhejch m\[G]il zb\[C]ejvá d\[F]ál, t\[C]am je c\[G]íl,
-a tak z\[C]pívej o S\[G]anta Cruz\[F].\[C]
+a tak z\[C]pívej o S\[G]anta Cruz.\[F]\[C]
 \endverse
 \beginref
 P\[F]olykej whisky a zv\[C]ířenej prach,
@@ -54,7 +54,7 @@ a tak zpívej o Santa Cruz.
 \beginref
 Polykej whisky\ldots
 \endverse
-\beginref
+\beginrec
 Indiáni jedou!!!
 \endverse
 \endsong
