--- a/songs/rosanakolejich.tex
+++ b/songs/rosanakolejich.tex
@@ -10,7 +10,7 @@ Tak do toho \[F6]šlápni,\[F#6] \[G6]ať vidíš kousek \[C]světa,
 vzít do dlaně \[F6]dálku\[F#6] \[G6]zase jednou zk\[C]us,
 telegrafní \[F6]dráty\[F#6] h\[G6]rajou ti už l\[C]éta
 to nekonečně \[F6]dlouh\[F#6]ý \[G6]monot\[F#6]ónní\[F6] b\[C]lues,
-je ráno, je ráno, nohama \[F6]stírá\[F#6]š \[G6]rosu na \[F6]kole\[F#6]jích.\[C]
+je ráno, je ráno, nohama \[F6]stírá\[F#6]š \[G6]rosu na \[F6]kole\[F#6]jích. \[C]
 \endverse
 \beginverse
 Pajda dobře hlídá pocestný, co se nocí toulaj,
@@ -19,6 +19,6 @@ po kolejích táhnou bosí a na špagátě nosí
 celej svůj dům, deku a rum.
 \endverse
 \beginref
-Tak do toho\ldots + n\[C]ohama \[F6]stírá\[F#6]š \[G6]rosu na \[F6]kole\[F#6]jích\ldots \[C]
+Tak do toho\ldots + n\[C]ohama \[F6]stírá\[F#6]š \[G6]rosu na \[F6]kole\[F#6]jích. \[C]
 \endverse
 \endsong
