--- a/songs/soudnyden.tex
+++ b/songs/soudnyden.tex
@@ -1,7 +1,7 @@
 \beginsong{Soudný den}[by={Spirituál kvintet}]
 \beginverse
 \[Ami]Zdál se mi sen, že se nebe hroutí,
-\[G]z dál se mi sen o poslední pouti,
+\[G]zdál se mi sen o poslední pouti,
 \[Ami]zdál se mi sen, že všechno seberou ti
 v ten \[Emi]soudný \[Ami]den.
 \endverse
@@ -18,7 +18,7 @@ stůj, nechoď dál / tak otevři se skálo
 v ten soudný den.
 \endverse
 \beginverse
-Pán tě zavolá / mám pro každého místo,
+Pán tě zavolá / má pro každého místo,
 Pán tě zavolá / jen kdo má duši čistou,
 Pán tě zavolá / sám nedokázal bys to
 v ten soudný den.
@@ -28,9 +28,9 @@ v ten soudný den.
 \[Ami]soudí, soudí, výčet pouhý \[Dmi]á \[E]á \[E7]á
 \endverse
 \beginstar
-\[Ami]Vtom se probudíš, to byl jen sen,
-\[F]v tom se probudíš, to byl jen sen,
-\[Dmi]vtom se probudíš, to byl jen sen,
+\[Ami]V~tom se probudíš, to byl jen sen,
+\[F]v~tom se probudíš, to byl jen sen,
+\[Dmi]v~tom se probudíš, to byl jen sen,
 \[Ami]jen p\[Emi]ouhý \[Ami]sen.
 \endverse
 \beginverse
