--- a/songs/vlastovkolet.tex
+++ b/songs/vlastovkolet.tex
@@ -6,7 +6,7 @@ obl\[C]étni zem, \[Ami]přileť až sem,
 \[Fmaj7]jen ať se císař zlobí.\[G]
 D\[Emi]nes v noci zdál se mi s\[Ami]en,
 \[Fmaj7]že ti zrní nasypal L\[G]udvík van Beethoven,
-vl\[C]aštovko, leť, \[Ami]nás, chudé, veď.\[Fmaj7]\[G7]\[C]
+vl\[C]aštovko, leť, \[Ami]nás chudé veď.\[Fmaj7]\[G7]\[C]
 \endverse
 \beginverse
 Zeptej se ryb, kde je jim líp,
@@ -15,7 +15,7 @@ kdo závidí, nic nevidí
 z té krásy zpod oblaků.
 Až spatříš nad sebou stín,
 věz, že ti mává sám pan Jurij Gagarin,
-vlaštovko, leť, nás, chudé, veď.
+vlaštovko, leť, nás chudé veď.
 \endverse
 \beginverse
 Vlaštovko, leť rychle a teď,
@@ -24,7 +24,7 @@ první je můj, druhý je tvůj,
 třetí pro světlonoše.
 Až budeš unavená,
 pírka ti pofouká Máří Magdaléna,
-vl\[C]aštovko, leť, \[Ami]nás, chudé, veď,\[Fmaj7]\[G]
-vl\[C]aštovko, leť, \[Ami]nás, chudé, veď\ldots\[Fmaj7]\[G]\[C]
+vl\[C]aštovko, leť, \[Ami]nás chudé veď,\[Fmaj7]\[G]
+vl\[C]aštovko, leť, \[Ami]nás chudé veď\ldots\[Fmaj7]\[G]\[C]
 \endverse
 \endsong
