--- a/songs/spinkej.tex
+++ b/songs/spinkej.tex
@@ -7,7 +7,7 @@ hl\[C]eď, už lampář \[Ami]světla rozsvěc\[G]í,
 \replay
 tak si d^očti stránku, z^avři knížku,
 h^onem hupky d^o pelíšku,
-^koťata už dávno ^vrní za pec^í.
+^koťata dávno ^vrní za pec^í.
 \endverse
 \beginref
 \replay
