Fixed chords in few songs.

--- a/songs/dudyzedinburgu.tex
+++ b/songs/dudyzedinburgu.tex
@@ -13,7 +13,7 @@ tenhle tanec mají Skoti \[A]nejrad\[D]ěj.
 \[D]Čtyři kroky tam duli duli dá,
 \[G]čtyři kroky sem duli duli dá.
 \[D]Kdo na tyhle čtyři kroky nesta\[A]čí,
-ten si \[D]se Skoty a se Skotkami \[A]nezask\[D]otačí.
+ten si \[D]se Skoty a se Skotkami \[A]nezask\[D]otačí. \[A]\[D]
 \endverse
 \beginverse
 Skotská kostka červená a zelená,
