--- a/songs/hudsonskysify.tex
+++ b/songs/hudsonskysify.tex
@@ -3,7 +3,7 @@
 Ten, kdo n\[Ami]ezná hukot vody lopatk\[C]ama vířený
 jako j\[G]á, jó, jako j\[Ami]á,
 kdo hudsonský slapy nezná sírou p\[G]ekla sířený,
-ať se \[Ami]na hudsonský š\[G]ífy najmout \[Ami]dá, joho\[G#]ho.\[Ami]
+ať se \[Ami]na hudsonský š\[G]ífy najmout \[Ami]dá, \[G]johoho.\[Ami]
 \endverse
 \beginverse
 Ten, kdo nepřekládál uhlí, šíf když na mělčinu vjel,
@@ -14,7 +14,7 @@ ať se na hudsonský šífy najmout dá, johoho.
 \beginref
 Ah\[F]oj, páru tam h\[Ami]oď,
 ať \[G]do pekla se dříve dohrab\[Ami]em,
-\[G]joh\[G#]oho,\[Ami] \[G]joh\[G#]oho.\[Ami]
+\[G]johoho,\[Ami] \[G]johoho.\[Ami]
 \endverse
 \beginverse
 Ten, kdo nezná noční zpěvy zarostenejch lodníků
@@ -44,6 +44,6 @@ kdo má srdce v správným místě, kdo je prostě príma kluk,
 ať se na hudsonský šífy najmout dá, johoho.
 \endverse
 \beginref
-Ahoj, páru tam hoď\ldots + joh\[G]oho\[G#].\[A] 
+Ahoj, páru tam hoď\ldots + joh\[G]oho.\[A] 
 \endverse
 \endsong
