--- a/songs/ranavtrave.tex
+++ b/songs/ranavtrave.tex
@@ -7,7 +7,7 @@ K\[Ami]aždý ráno dlouze z\[G]íval, \[Ami]utřel čelo do ruk\[G]ávu,
 \endverse
 \beginverse
 Poz\[C]nal Mo\[G]ravěn\[F]ku krás\[C]nou
-a v\[Ami]ínečko \[C]ze \[C]zlata,
+a v\[Ami]ínečko \[G]ze \[C]zlata,
 v Čechách slá\[G]vu mu\[F]zikan\[C]tů
 \[Ami]umaza\[Emi]nou \[Ami]od bláta.
 \endverse
