Updated gitignore to ignore swp and booklet files. Added Svet je velkej.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -26,4 +26,5 @@
 \input{songs/sejdemesevpanu.tex}
 \input{songs/slapejdal.tex}
 \input{songs/stranzatrati.tex}
+\input{songs/svetjevelkej.tex}
 \input{songs/usmejsenasvet.tex}
