Fixed spaces in stran za trati.

--- a/songs/stranzatrati.tex
+++ b/songs/stranzatrati.tex
@@ -1,16 +1,16 @@
 \beginsong{Stráň za tratí}[by={Jaroslav Matějů}]
 \capo{4}
 \beginverse
-\[G]Jaro obrací\[F] voňavý \[C]stránky hledá\[G]ní, 
-sen se nevrací,\[F] noci se \[C]mění v čeká\[G]ní. 
+\[G]Jaro obrací \[F]voňavý \[C]stránky hledá\[G]ní, 
+sen se nevrací, \[F]noci se \[C]mění v čeká\[G]ní. 
 Pro nás kolikrát jsem hrál a kouzl\[F]il duh\[C]u pro tvů\[G]j den,
 v očích jsem tě hřá\[F]l a víno \[C]míchal se spl\[G]ínem.
 \endverse
 \beginref
-\[G]Stráň\[Ami7] za tra\[D]tí a jedno smutný ráno, 
+\[G]Stráň \[Ami7]za tra\[D]tí a jedno smutný ráno, 
 \[G]nám\[Ami7] nevrá\[D]tí, to co není dáno, 
-s\[C] jiným s jinou\[Cmi] krademe svůj\[G] čas, 
-míje\[C]ní a \[Cmi]stesk hluboko v\[G] nás.
+s\[C]~jiným s jinou\[Cmi] krademe svůj \[G]čas, 
+míje\[C]ní a \[Cmi]stesk hluboko v~\[G]nás.
 \endverse
 \beginverse
 Slova kvetou dál, chodíme dál jen v oblacích, 
