Fixed order of songs. Added chords to svetjevelkej.

--- a/songs/svetjevelkej.tex
+++ b/songs/svetjevelkej.tex
@@ -1,37 +1,37 @@
 \beginsong{Svět je velkej}[by={Ivan Hlas}]
 \beginverse
-Kdybych plakal, když se jásá
-Kdybych hladil, když se drásá
-Kdybych drásal, když se hladí
-Řek by někdo, že to vadí
+\[Ami]Kdybych plakal, když se \[C]jásá
+kdybych \[Emi]hladil, když se \[G]drásá
+kdybych \[Dmi]drásal, když se \[Ami]hladí
+řek by \[C]někdo, \[Emi]že to \[Ami]vadí.
 \endverse
 \beginverse
 Kdybych jásal, když se pláče
-Kdybych klesal, když se skáče
-Kdybych vrzal, když to ladí
-Řek by někdo, že to vadí
+kdybych klesal, když se skáče
+kdybych vrzal, když to ladí
+řek by někdo, že to vadí.
 \endverse
 \beginref
-A tak, hochu, neplač, nelkej
-Když si osud zamane
-Svět je prostornej a velkej
-Leccos možná vyvane
-Bez trablů to na něm nejde
-Nejde, hochu, ne a ne
-Do světa se všechno vejde
-Andělé i satané
+\[F]A tak, hochu, neplač, \[C]nelkej
+\[Dmi]když si osud zama\[Ami]ne
+\[Dmi]svět je prostornej a \[Emi]velkej
+\[Dmi]leccos možná \[Ami]vyva\[E]ne.
+\[F]Bez trablů to na něm \[C]nejde
+\[Dmi]nejde, hochu, ne a \[Ami]ne
+\[Dmi]do světa se všechno \[Emi]vejde
+\[Dmi]andělé i \[E]satané
 \endverse
 \beginverse
 Kdyby v peklo zvrh se Eden
-Kdyby mnoho byl jen jeden
-Kdyby klamal ten, kdo radí
-Řek by někdo, že to vadí
+kdyby mnoho byl jen jeden
+kdyby klamal ten, kdo radí
+řek by někdo, že to vadí.
 \endverse
 \beginverse
 Až nám budou chystat máry
-Až zjistíme, že jsme starý
-Že nám vzali naše mládí
-Komu řeknem, že to vadí?
+až zjistíme, že jsme starý
+že nám vzali naše mládí
+komu řeknem, že to vadí?
 \endverse
 \beginref
 A tak, hochu, neplač\ldots
