Little fixes. Normalized repeated refrain notation. Normalized repetition count notation.

--- a/songs/casysemeni.tex
+++ b/songs/casysemeni.tex
@@ -16,7 +16,7 @@ a poznání hořký nám tahle pouť dá
 ta hořkost teď zůstává navěky v nás. 
 \endverse
 \beginref 
-~
+Vždyť všichni, kdo vidí\ldots
 \endverse
 \beginverse
 Kdo v čele šel, bouřlivě oslavoval 
@@ -25,6 +25,6 @@ však dřív, než se z oslavy vzpamatoval
 zase poslední na konci zástupu stál. 
 \endverse
 \beginref
-~
+Vždyť všichni, kdo vidí\ldots
 \endverse
 \endsong
