--- a/songs/cesta.tex
+++ b/songs/cesta.tex
@@ -21,7 +21,7 @@ minu\[^C]lost tvůj \[G]sen \[F]spou\[G]tá\[C]vá,
 \replay[refrain]
 nesuď ^záští ^svou přá^tel^ství,
 jen to tvůj ^pád zas^ta^ví.\[Ami] 
- \endverse
+\endverse
 \musicnote{mezihra}
 \beginverse
 Víš, kdo se sníží, pravdě světlo brát,
@@ -32,10 +32,10 @@ scénář je bída, z opony zbyl cár,
 jen závratným tichem zívá prázdný sál. 
 \endverse
 \beginref
- ~
+Víra v bílý den\ldots
 \endverse
 \musicnote{mezihra}
- \beginverse
+\beginverse
 Tvá láska skrývá chladné kamení,
 vím, tak to bývá, trest jak pomník ční,
 s ním překročíš i svůj stín.
@@ -43,7 +43,7 @@ Dál touha sílí, míříš k slunci vstříc,
 sám v téhle chvíli přemýšlíš, co říct,
 tvá slova jsou drahý kámen, září tmou. 
 \endverse
- \beginref
- ~
+\beginref
+Víra v bílý den\ldots
 \endverse
 \endsong
