--- a/songs/ctverorocnichobdobi.tex
+++ b/songs/ctverorocnichobdobi.tex
@@ -28,7 +28,7 @@ pro ty co ráno dávají si dobrou noc
 \beginverse
 Až bílé vločky spojí se a neroztají 
 potom se setkají ti co se setkat mají 
-\lrep na dráze osudů jim kdosi cestu sved? 
+\lrep na dráze osudů jim kdosi cestu sved
    počkali  na sebe i sto světelných let \rrep
 \endverse
 \endsong
