--- a/songs/dharmovitulaci.tex
+++ b/songs/dharmovitulaci.tex
@@ -20,7 +20,7 @@ jen \[G]se svou samotou na \[A]Desolation \[Hmi]Hill
 \beginverse 
 Teď tu sedíš jako slepý, v ruce láhev máš 
 na jméno Ryder Japhy tiše vzpomínáš 
-Na mejdany na předměstí a na holky fajnový 
+na mejdany na předměstí a na holky fajnový 
 Japhy, snad budeš mít štěstí na pouti zenový 
 \endverse
 \beginstar
@@ -30,6 +30,6 @@ tam našel jsi svůj klid zbaven vrozených pout
 tam našel jsi jak žít bez Telegraph road 
 \endverse 
 \beginref
-~
+Půlnoční duch nestaví\ldots
 \endverse
 \endsong
