--- a/songs/dobrejden.tex
+++ b/songs/dobrejden.tex
@@ -20,7 +20,7 @@ to má svůj rub a líc,
 co chci mít nestojí vůbec nic. 
 \endverse
 \beginref
-~
+Dobrej den slunce dává\ldots
 \endverse
 \beginverse
 Kdybys žil podruhý, co chceš mít? 
@@ -30,6 +30,6 @@ pro něj žít bych se bál,
 proč bych sám sebe jen předstíral. 
 \endverse
 \beginref
-~
+Dobrej den slunce dává\ldots
 \endverse
 \endsong
