--- a/songs/hledani.tex
+++ b/songs/hledani.tex
@@ -23,7 +23,7 @@ Najde, kdo ^hledá^, ^mně, ^Tebe i ^sebe. \rrep
 ^a než se ^rok s rokem ^sejde, ^andělé s ^čerty se ^žení. 
 \endverse
 \beginref
-~
+Najde, kdo hledá\ldots
 \endverse
 \minfrets=5
 \gtab{D6}{000202}
