--- a/songs/hradby.tex
+++ b/songs/hradby.tex
@@ -1,6 +1,6 @@
 \beginsong{Hradby}[by={Marien}]
 \beginverse
-\[Amaj7]Hej proč \[Amaj6]zkouší to teď \[Dmaj6]vzdát,\[Dmaj7] 
+\[Amaj7]Hej proč \[Amaj6]zkouší to teď \[Dmaj6]vzdát, \[Dmaj7] 
 \[Amaj7]když \[Amaj6]došel jsi až \[G]sem, 
 jen vzít slunce \[D]do dlaní a ve stéblech \[Hmi]trávy snít 
 cosi se \[E]valí a myšlenku nelze zasta\[C#mi]vit, 
@@ -18,11 +18,11 @@ po osm staletí.
 \endverse
 \beginref
 \[A]Dej bůh nám malým malé \[Hmi]trápení, 
-co dá se \[E]unést a co se časem zaho\[A]jí,\[E]
+co dá se \[E]unést a co se časem zaho\[A]jí, \[E]
 \[A]dej bůh nám sílu bránit \[Hmi]vlastní hrad, 
 aby tu \[E]kámen na kameni mohl chvíli \[C#mi]stát, 
 ať lidé \[F#mi]doznají klidu \[E]pasoucích se \[D]stád, 
-ve jménu \[Hmi]smíření.[E] 
+ve jménu \[Hmi]smíření. \[E] 
 \endverse
 \beginverse
 V chrámoví zvony dozněly, 
@@ -34,7 +34,7 @@ chceš vidět anděly dobrá běž se utopit,
 a splétej si vlastní bič. 
 \endverse
 \beginref
-~
+Dej bůh nám malým\ldots
 \endverse
 \gtab{Amaj7}{X02120}
 \gtab{Amaj6}{X02222}
