--- a/songs/jeruzalem.tex
+++ b/songs/jeruzalem.tex
@@ -24,7 +24,7 @@ když vichry vanou nahoru i dolů,
 Moravskou branou k severnímu pólu.
 \endverse
 \beginref
-~
+Koupil jsem bílý papír\ldots
 \endverse
 \beginstar
 Ruce z kapes a vlasy za límec,
@@ -49,6 +49,6 @@ ve školním autobuse dokola jedna sloka,
 holka modrooká nesedávej u potoka.
 \endverse
 \beginref
-~
+Koupil jsem bílý papír\ldots
 \endverse
 \endsong
