--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -41,7 +41,7 @@ splní se vše
 co jsi kdy chtěl
 \endverse
 \beginref
-Každý si nese své břímě 3x
+\lrep Každý si nese své břímě \rrep \rep{3}
 \endverse
 \beginverse
 E I------------------------I
