--- a/songs/krestantoreknejlip.tex
+++ b/songs/krestantoreknejlip.tex
@@ -23,10 +23,10 @@ jedněch almužna je pro jiný plat,
 \[F]Když oči jak brány \[C]zavřem,
 je tu \[G]noc jak černej \[Ami]mák,
 jsme \[F]ve válce, je \[C]válka v nás,
-a \[G]zase nao\[Am]pak
-Ten \[F]Křesťan to řek \[C]nejlíp,
+a \[G]zase nao\[Ami]pak
+\[F]Křesťan to řek \[C]nejlíp,
 řek kde \[G]klíč brána \[Ami]má,
-\[F]Tak otevři \[C]oči, ta \[F]hloupá noc \[C]končí a mír je \[G]mezi ná\[C]ma
+\[F]Tak otevři \[C]oči, ta \[F]hloupá noc \[C]končí a mír je \[G]mezi ná\[Ami]ma
 \endverse
 \beginverse
 Jedněch sen je pro jiný běs,
@@ -44,10 +44,10 @@ jedněch soudce je pro jiný linč,
 jedněch výkřik je pro jiný šepot,
 jedněch prohra je pro jiný jackpot,
 jedněch polez je pro jiný leť,
-jedněch černá je pro jiný pleť,
+jedněch černá je pro jiný pleť.
 \endverse
 \beginref
-~
+Když oči jak brány zavřem\ldots
 \endverse
 \beginverse
 Jedněch prorok je pro jiný lhář,
@@ -65,9 +65,9 @@ jedněch podlaha je pro jiný strop,
 jedněch drama je pro jiný fraška,
 jedněch setkání je pro jiný srážka,
 jedněch křišťál je pro jiný plast,
-jedněch bolest je pro jiný slast,
+jedněch bolest je pro jiný slast.
 \endverse
 \beginref
-~
+Když oči jak brány zavřem\ldots
 \endverse
 \endsong
