--- a/songs/nechtenas.tex
+++ b/songs/nechtenas.tex
@@ -29,7 +29,7 @@ ona laní je, on parním válcem,
 dvanáct kusů, čtyři vodky, dál už nic.
 \endverse
 \beginref
-~
+Místo plachet máme pestrou vinětu\ldots
 \endverse
 \beginverse
 Hele, ty jsi pěkná, ukaž pupík,
@@ -38,6 +38,6 @@ moudrosti a modrej dým se kupí,
 aby se líp domů kráčelo.
 \endverse
 \beginref
-~
+Místo plachet máme pestrou vinětu\ldots
 \endverse
 \endsong
