--- a/songs/pantarhei.tex
+++ b/songs/pantarhei.tex
@@ -39,14 +39,14 @@ a na jazyk se mi vtírají
 ta dvě slova: Panta rhei
 \endverse
 \beginref
- ~
+V podivném rozmaru naději dáváš\ldots
 \endverse
 \setcounter{versenum}{4}
 \beginverse
 Můj další děj bolí vzpomínkou\ldots
 +
 \lrep jen dvě slova: Panta rhei
-ta dvě slova: Panta rhei\ldots\rrep (3x)
+ta dvě slova: Panta rhei\ldots\rrep \rep{3}
 \endverse
 
 \endsong
