--- a/songs/prvnidamacountry.tex
+++ b/songs/prvnidamacountry.tex
@@ -16,7 +16,7 @@ A tak to běží pořád dál,
 večer mám prázdný dlaně, v srdci tíseň. 
 \endverse 
 \beginref
-~
+Jsou vlaky, který nestaví\ldots
 \endverse
 \beginverse
 Pak přišlo ráno najednou, 
@@ -25,7 +25,7 @@ Strop rozhoupal se nade mnou,
 marně se ptám, kdo za to všechno může. 
 \endverse
 \beginref
-~
+Jsou vlaky, který nestaví\ldots
 \endverse
 \beginverse
 Vzbudil mě obyčejnej den, 
@@ -34,6 +34,6 @@ Konečně vím, že zase jsem
 a jak na slunci hoří velká sláva. 
 \endverse
 \beginref 
-~
+Jsou vlaky, který nestaví\ldots
 \endverse
 \endsong
