--- a/songs/sejdemesevpanu.tex
+++ b/songs/sejdemesevpanu.tex
@@ -21,7 +21,7 @@ než nám v \[Hmi]té výšce udělí \[C]páni vyzname\[D]ná\[Hmi]ní,
 \[Emi]to bych se radši holka \[A]zabil, ještě \[C]nechci s tebou z kola \[G]ven. 
 \endverse
 \beginref
-~
+Sejdeme se k ránu\ldots
 \endverse
 \beginverse
 To dobré, co jsi v létě prožil, ukládám do košíku pro tebe, 
@@ -30,5 +30,8 @@ nejsi hrdina ani blázen,
 raděj vrať se mi zpátky na zem, 
 jsem tu bez tebe Dívčí kámen na holé pláni, 
 k rukám bys mi svoje tělo složil, samé hlouposti mi říkal jen.
+\endverse
+\beginref
+Sejdeme se k ránu\ldots
 \endverse
 \endsong
