Added support for pretty guitar tabs. Needs lilypond package.

--- a/songs/kazdysinesesvebrime.tex
+++ b/songs/kazdysinesesvebrime.tex
@@ -43,22 +43,11 @@ co jsi kdy chtěl
 \beginref
 \lrep Každý si nese své břímě \rrep \rep{3}
 \endverse
-\beginverse
-E I------------------------I
-H I-------2--------------3-I
-G I-----4-----4--------2---I
-D I---2-----2---2----4-----I
-A I-0--------------0-------I
-E I------------------------I
-\endverse
-\beginref
-E I---------0------2--------------0--------2-----I
-H I-----2--------------3------2----------3-----3-I
-G I-------4------2---2----------4------2-----2---I
-D I---2--------0------------2--------0-----------I
-A I-0---------------------0----------------------I
-E I----------------------------------------------I
-\endverse
+
+\textnote{Sloka}
+\lilypondfile{tabs/kazdysinesesvebrimeverse.ly}
+\textnote{Ref}
+\lilypondfile{tabs/kazdysinesesvebrimeref.ly}\\
 \minfrets=2
 \gtab{A}{X0242X}
 \gtab{D/A}{X0423X}
