Added song fi-li-mi.

--- a/FF/songs.tex
+++ b/FF/songs.tex
@@ -4,6 +4,7 @@
 \input{songs/ctverorocnichobdobi.tex}
 \input{songs/dharmovitulaci.tex}
 \input{songs/dobrejden.tex}
+\input{songs/filimi.tex}
 \input{songs/fram.tex}
 \input{songs/hledani.tex}
 \input{songs/hradby.tex}
